--- a/recommended/portfolio.html
+++ b/recommended/portfolio.html
@@ -6,21 +6,64 @@
 
 <!DOCTYPE = "html">
 
-<html lang = "en-us">
+<html lang="en-us">
+
 <head>
     <meta charset="UTF-8">
     <title>Kevin Cheng Fang Wang's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
-    <h1>Kevin Cheng Fang Wang</h1>  
-    <h4>About</h4>
-    <h4>Portfolio</h4> 
-    <h4>Contact</h4>
+
 <header>
-
+    <div class="topBar">
+        <div class="nameBox">
+            <h1>Kevin Cheng Fang Wang</h1>
+        </div>
+        <div class="tabs">
+            <table>
+                <tr>
+                    <td class="leftCell"><a href="index.html">About Me</a> </td>
+                    <td class="centerCell"><a href="portfolio.html">Portfolio</a></td>
+                    <td class="rightCell"><a href="contact.html">Contact</a></td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </header>
-<body>
 
+<body>
+    <div class="mainContentBox">
+        <div class="mainContent">
+            <h2 class="pageTitle">Portfolio</h2>
+            <hr>
+            <div class="container">
+                <img src="images/placeHolderImage.jpg" class="portfolioImages" alt="portfolioPic1">
+                <h3 class="portfolioTitle">Portfolio 1</h3>
+            </div>
+
+            <div class="container">
+                <img src="images/placeHolderImage.jpg" class="portfolioImages" alt="portfolioPic2">
+                <h3 class="portfolioTitle">Portfolio 2</h3>
+            </div>
+
+            <div class="container">
+                <img src="images/placeHolderImage.jpg" class="portfolioImages" alt="portfolioPic3">
+                <h3 class="portfolioTitle">Portfolio 3</h3>
+            </div>
+            <div class="container">
+                <img src="images/placeHolderImage.jpg" class="portfolioImages" alt="portfolioPic4">
+                <h3 class="portfolioTitle">Portfolio 4</h3>
+            </div>
+            <div class="container">
+                <img src="images/placeHolderImage.jpg" class="portfolioImages" alt="portfolioPic5">
+                <h3 class="portfolioTitle">Portfolio 5</h3>
+            </div>
+
+        </div>
+    </div>
 </body>
+<footer>
+
+</footer>
 
 </html>
