--- a/recommended/index.html
+++ b/recommended/index.html
@@ -6,21 +6,59 @@
 
 <!DOCTYPE = "html">
 
-<html lang = "en-us">
+<html lang="en-us">
+
 <head>
     <meta charset="UTF-8">
     <title>Kevin Cheng Fang Wang's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
-    
-<header>
-    <h1>Kevin Cheng Fang Wang</h1>  
-    <h4>About</h4>
-    <h4>Portfolio</h4> 
-    <h4>Contact</h4>
-</header>
-<body>
 
+<header>
+    <div class="topBar">
+        <div class="nameBox">
+            <h1>Kevin Cheng Fang Wang</h1>
+        </div>
+        <div class="tabs">
+            <table>
+                <tr>
+                    <td class="leftCell"><a href ="index.html">About Me</a> </td>
+                    <td class="centerCell"><a href= "portfolio.html">Portfolio</a></td>
+                    <td class="rightCell"><a href="contact.html">Contact</a></td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</header>
+
+
+<body>
+    <div class="mainContentBox">
+        <div class="mainContent">
+            <h2 class="pageTitle">About Me</h2>
+            <hr>
+            <img class="indexPic" src="images/indexImg.JPG" alt="myImage">
+            <p> My name is Kevin Wang and I graduated Pennsylvania State University studying
+                Engineering Sciences, a multidisciplinary program in which student demonstrate their
+                knowledge in engineering through completing a capstone project. To which I am able to combine
+                my interest in multiple subjects, especially electrical engineering and biomedicine, in the
+                Magnetic Resonance Imaging (MRI) lab. My group, which includes students in mechanical and
+                biomedical engineering, uses MRI technology in study tissue stiffness, an indicator of cancer and
+                other diseases. At Penn State I recieved a cross disciplinary education that allows me to
+                enagage problem solving in a unique way.</p>
+            <p>Growing up I was immersed in multiple cultures. I was born in Taiwan but grew up in the
+                United States, China and Japan. In college I spent time studying abroad in Germany where I learned
+                the basics of production management and manufacturing, and experienced their culture. I have a diverse
+                cultural knowledge by living and studying in these different countries. </p>
+            <p>Currently I am studying some web development skills with UPenn's coding bootcamp. I am currently
+                learning HTML and CSS, and plan on obtaining more skills in the future 6 months. I plan on entering the
+                programming industry and would like to incorporate my multidisciplinary and cross-cultural background
+                into my future work.</p>
+        </div>
+    </div>
 </body>
+
+<footer>
+</footer>
 
 </html>
