--- a/recommended/index.html
+++ b/recommended/index.html
@@ -4,7 +4,7 @@
     Date due: 2019/01/26
 -->
 
-<!DOCTYPE = "html">
+<!DOCTYPE html>
 
 <html lang="en-us">
 
@@ -14,30 +14,28 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 
-<header>
-    <div class="topBar">
-        <div class="nameBox">
-            <h1>Kevin Cheng Fang Wang</h1>
-        </div>
-        <div class="tabs">
-            <table>
-                <tr>
-                    <td class="leftCell"><a href ="index.html">About Me</a> </td>
-                    <td class="centerCell"><a href= "portfolio.html">Portfolio</a></td>
-                    <td class="rightCell"><a href="contact.html">Contact</a></td>
-                </tr>
-            </table>
-        </div>
-    </div>
-</header>
-
-
 <body>
+    <header>
+        <div class="topBar">
+            <div class="nameBox">
+                <h1>Kevin Cheng Fang Wang</h1>
+            </div>
+            <div class="tabs">
+                <table>
+                    <tr>
+                        <td class="leftCell"><a href="index.html">About Me</a> </td>
+                        <td class="centerCell"><a href="portfolio.html">Portfolio</a></td>
+                        <td class="rightCell"><a href="contact.html">Contact</a></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </header>
     <div class="mainContentBox">
-        <div class="mainContent">
+        <section class="mainContent">
             <h2 class="pageTitle">About Me</h2>
             <hr>
-            <img class="indexPic" src="images/indexImg.JPG" alt="myImage">
+            <img id="indexPic" src="images/indexImg.JPG" alt="myImage">
             <p> My name is Kevin Wang and I graduated Pennsylvania State University studying
                 Engineering Sciences, a multidisciplinary program in which student demonstrate their
                 knowledge in engineering through completing a capstone project. To which I am able to combine
@@ -50,15 +48,16 @@
                 United States, China and Japan. In college I spent time studying abroad in Germany where I learned
                 the basics of production management and manufacturing, and experienced their culture. I have a diverse
                 cultural knowledge by living and studying in these different countries. </p>
-            <p>Currently I am studying some web development skills with UPenn's coding bootcamp. I am currently
+            <p>Currently I am studying some web development skills with UPenn's coding bootcamp. I am 
                 learning HTML and CSS, and plan on obtaining more skills in the future 6 months. I plan on entering the
                 programming industry and would like to incorporate my multidisciplinary and cross-cultural background
                 into my future work.</p>
-        </div>
+        </section>
+    </div>
+    <div class="footer">
     </div>
 </body>
 
-<footer>
-</footer>
+
 
 </html>
