--- a/recommended/portfolio.html
+++ b/recommended/portfolio.html
@@ -4,7 +4,7 @@
     Date due: 2019/01/26
 -->
 
-<!DOCTYPE = "html">
+<!DOCTYPE = html>
 
 <html lang="en-us">
 
@@ -14,56 +14,55 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 
-<header>
-    <div class="topBar">
-        <div class="nameBox">
-            <h1>Kevin Cheng Fang Wang</h1>
-        </div>
-        <div class="tabs">
-            <table>
-                <tr>
-                    <td class="leftCell"><a href="index.html">About Me</a> </td>
-                    <td class="centerCell"><a href="portfolio.html">Portfolio</a></td>
-                    <td class="rightCell"><a href="contact.html">Contact</a></td>
-                </tr>
-            </table>
-        </div>
-    </div>
-</header>
-
 <body>
+    <header>
+        <div class="topBar">
+            <div class="nameBox">
+                <h1>Kevin Cheng Fang Wang</h1>
+            </div>
+            <div class="tabs">
+                <table>
+                    <tr>
+                        <td class="leftCell"><a href="index.html">About Me</a> </td>
+                        <td class="centerCell"><a href="portfolio.html">Portfolio</a></td>
+                        <td class="rightCell"><a href="contact.html">Contact</a></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </header>
     <div class="mainContentBox">
-        <div class="mainContent">
+        <section class="mainContent">
             <h2 class="pageTitle">Portfolio</h2>
             <hr>
             <div class="container">
-                <img src="images/placeHolderImage.jpg" class="portfolioImages" alt="portfolioPic1">
+                <img src="images/placeHolderImage.JPG" class="portfolioImages" alt="portfolioPic1">
                 <h3 class="portfolioTitle">Portfolio 1</h3>
             </div>
-
             <div class="container">
-                <img src="images/placeHolderImage.jpg" class="portfolioImages" alt="portfolioPic2">
+                <img src="images/placeHolderImage.JPG" class="portfolioImages" alt="portfolioPic2">
                 <h3 class="portfolioTitle">Portfolio 2</h3>
             </div>
 
             <div class="container">
-                <img src="images/placeHolderImage.jpg" class="portfolioImages" alt="portfolioPic3">
+                <img src="images/placeHolderImage.JPG" class="portfolioImages" alt="portfolioPic3">
                 <h3 class="portfolioTitle">Portfolio 3</h3>
             </div>
             <div class="container">
-                <img src="images/placeHolderImage.jpg" class="portfolioImages" alt="portfolioPic4">
+                <img src="images/placeHolderImage.JPG" class="portfolioImages" alt="portfolioPic4">
                 <h3 class="portfolioTitle">Portfolio 4</h3>
             </div>
             <div class="container">
-                <img src="images/placeHolderImage.jpg" class="portfolioImages" alt="portfolioPic5">
+                <img src="images/placeHolderImage.JPG" class="portfolioImages" alt="portfolioPic5">
                 <h3 class="portfolioTitle">Portfolio 5</h3>
             </div>
+        </section>
+    </div>
 
-        </div>
+    <div class="footer">
     </div>
 </body>
-<footer>
 
-</footer>
+
 
 </html>
