--- a/recommended/portfolio.html
+++ b/recommended/portfolio.html
@@ -4,7 +4,7 @@
     Date due: 2019/01/26
 -->
 
-<!DOCTYPE = html>
+<!DOCTYPE html>
 
 <html lang="en-us">
 
@@ -43,7 +43,6 @@
                 <img src="images/placeHolderImage.JPG" class="portfolioImages" alt="portfolioPic2">
                 <h3 class="portfolioTitle">Portfolio 2</h3>
             </div>
-
             <div class="container">
                 <img src="images/placeHolderImage.JPG" class="portfolioImages" alt="portfolioPic3">
                 <h3 class="portfolioTitle">Portfolio 3</h3>
