--- a/recommended/contact.html
+++ b/recommended/contact.html
@@ -44,7 +44,7 @@
                 <input type="email" placeholder="example@gmail.com" class="inputBox1">
 
                 <p>Message</p>
-                <input type="text" class="inputBox2"><br>
+                <textarea class="inputBox2"></textarea><br>
 
                 <button type="submit" id="submitButton">Submit</button>
             </form>
