--- a/recommended/portfolio.html
+++ b/recommended/portfolio.html
@@ -36,24 +36,24 @@
             <h2 class="pageTitle">Portfolio</h2>
             <hr>
             <div class="container">
-                <img src="images/placeHolderImage.JPG" class="portfolioImages" alt="portfolioPic1">
+                <img src="images/placeHolderImage.jpg" class="portfolioImages" alt="portfolioPic1">
                 <h3 class="portfolioTitle">Portfolio 1</h3>
             </div>
             
             <div class="container">
-                <img src="images/placeHolderImage.JPG" class="portfolioImages" alt="portfolioPic2">
+                <img src="images/placeHolderImage.jpg" class="portfolioImages" alt="portfolioPic2">
                 <h3 class="portfolioTitle">Portfolio 2</h3>
             </div>
             <div class="container">
-                <img src="images/placeHolderImage.JPG" class="portfolioImages" alt="portfolioPic3">
+                <img src="images/placeHolderImage.jpg" class="portfolioImages" alt="portfolioPic3">
                 <h3 class="portfolioTitle">Portfolio 3</h3>
             </div>
             <div class="container">
-                <img src="images/placeHolderImage.JPG" class="portfolioImages" alt="portfolioPic4">
+                <img src="images/placeHolderImage.jpg" class="portfolioImages" alt="portfolioPic4">
                 <h3 class="portfolioTitle">Portfolio 4</h3>
             </div>
             <div class="container">
-                <img src="images/placeHolderImage.JPG" class="portfolioImages" alt="portfolioPic5">
+                <img src="images/placeHolderImage.jpg" class="portfolioImages" alt="portfolioPic5">
                 <h3 class="portfolioTitle">Portfolio 5</h3>
             </div>
             
