--- a/recommended/index.html
+++ b/recommended/index.html
@@ -1,5 +1,5 @@
 <!-- 
-    UpennLPS HW1 index page
+    UpennLPS HW1 index page for recommended assignment
     Author: Kevin Wang
     Date due: 2019/01/26
 -->
