--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="mainContentBox">
         <section class="mainContent">
-            <h2 class="pageTitle"> Navigation</h2>
+            <h2 class="pageTitle"> Index</h2>
             <hr>
             <p>
                 This is the homepage for Kevin Wang's HW1, building a wireframe/portfolio for the Coding Bootcamp. Here you will find the links for the
