--- a/recommended/contact.html
+++ b/recommended/contact.html
@@ -22,9 +22,9 @@
             <div class="tabs">
                 <table>
                     <tr>
-                        <td class="leftCell"><a href="index.html">About Me</a> </td>
-                        <td class="centerCell"><a href="portfolio.html">Portfolio</a></td>
-                        <td class="rightCell"><a href="contact.html">Contact</a></td>
+                        <td class="leftCell"><a href="index.html" id="noUL">About Me</a> </td>
+                        <td class="centerCell"><a href="portfolio.html" id="noUL">Portfolio</a></td>
+                        <td class="rightCell"><a href="contact.html" id="noUL">Contact</a></td>
                     </tr>
                 </table>
             </div>
